# serial-monitor-gui

./: Cargo.toml  build.rs  dioxus.toml  output.css  tailwind.config.js
.cargo/: config.toml
src/: api.rs  app.rs  data.rs  handle.rs  main.rs  ports.rs  ui.rs
src/components/: consoles.rs  input_box.rs  selector_row.rs
