[package]
name = "serial-monitor-gui"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
fermi = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-desktop = "0.4.0"
log = "0.4.20"
rdev = "0.5.3"
tokio = { version = "1.32.0", features = ["full"] }
rfd = { version = "0.11.3", features = ["file-handle-inner"] }
env_logger = "0.10.0"
tokio-serial = "5.4.4"
dirs = "5.0.1"
csv = "1.2.2"

