[package]
name = "serial-monitor-gui"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["full"] }
rfd = { version = "0.12.0", default-features = false, features = ["xdg-portal"] }
env_logger = "0.10.0"
tokio-serial = { version = "5.4.4", features = ["libudev"] }
dirs = "5.0.1"
csv = "1.2.2"
anyhow = "1.0.75"
serde = "1.0.188"
serde_yaml = "0.9.25"

